--- a/css/main.css
+++ b/css/main.css
@@ -1,87 +1,49 @@
-.main {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+body {
+  padding-top: 60px;
+  background-color: #f8f8f8 !important;
 }
 
-.nav {
-  margin-left: auto;
-  margin-right: auto;  
-  background: #fff;
-  font-size: 1.8em;
-  padding: 14px;
-  padding-left: 30px;
-  border: 1px solid #e6e8eb;
+
+.navbar-default {
+  background-color: #fff !important;
 }
 
-.header {
-  display: inline;
-  width: 25%;
+.navbar-brand {
+  color: #404040 !important;
 }
 
 .players {
-  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .player {
-  text-align: center;
-  background: #fff;
-  width: 280px;
+  width: 300px;
   margin: 6px;
-  padding: 20px;
-  font-size: 1em;
-  border: 1px solid #e6e8eb;
+  padding: 16px;
+  border: 1px solid #e7e7e7;
   border-radius: 4px;
-  position: relative;
+  background-color: #fff;
 }
 
-.name {
-  font-size: 1.5em;
+.player[disabled] {
+  opacity: .6;
+}
+
+.player-name {
+  font-size: 1.3em; 
   color: rgb(66, 139, 202);
   overflow: hidden;
 }
 
-.account {
-  color: #555;
+.player-money {
+  font-size: 1.1em;
   overflow: hidden;
 }
 
-.overlay-window {
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  width: 400px; 
-  height: 200px; 
-  background-color: #fff;
-  margin: auto;
-  border: 1px solid #e6e8eb;
-  border-radius: 4px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-}
-
-.overlay-window > p {
-  font-size: 1.5em;
-  width: 70%;
-  text-align: center;
-  margin: auto;
-  color: #444;
-  padding: 40px;
-  padding-bottom: 30px
-}
-
-.submit {
-  width: 80%;
-  margin: auto;
-  padding: 0;
-}
-
-.submit > input{
-  width: 80%;
-}
-
-.overlay-window > .btn-group {
-  width: 80%;
-  margin: auto;
+.form-group,
+.player-name,
+.player-money {
+  margin-bottom: 8px !important;
 }
